--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "weeklyeats",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
+  "expo": {
+    "plugins": [
+      "expo-router"
+    ]
+  },
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,9 +15,15 @@
   },
   "dependencies": {
     "expo": "~54.0.20",
+    "expo-constants": "~18.0.10",
+    "expo-linking": "~8.0.8",
+    "expo-router": "~6.0.13",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
