--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "@react-native-async-storage/async-storage": "^1.23.1"
   },
   "devDependencies": {
     "@testing-library/jest-native": "^5.4.3",
