--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "expo": "~54.0.20",
     "expo-constants": "~18.0.10",
     "expo-linking": "~8.0.8",
@@ -23,9 +24,9 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-gesture-handler": "^2.29.0",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
-    "@react-native-async-storage/async-storage": "^1.23.1"
+    "react-native-screens": "~4.16.0"
   },
   "devDependencies": {
     "@testing-library/jest-native": "^5.4.3",
