--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@react-native-community/datetimepicker": "^8.5.0",
     "expo": "~54.0.20",
     "expo-constants": "~18.0.10",
+    "expo-haptics": "^15.0.7",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.13",
     "expo-status-bar": "~3.0.8",
+    "lottie-react-native": "^7.3.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
