--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest"
   },
@@ -19,6 +19,7 @@
     "@react-native-community/datetimepicker": "^8.5.0",
     "expo": "~54.0.20",
     "expo-constants": "~18.0.10",
+    "expo-dev-client": "~6.0.17",
     "expo-haptics": "^15.0.7",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.13",
@@ -28,6 +29,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "^2.29.0",
+    "react-native-keyboard-controller": "^1.19.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0"
   },
