--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.17",
     "expo-haptics": "^15.0.7",
+    "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.13",
     "expo-status-bar": "~3.0.8",
